--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Practice</title>
 </head>
 <body>
-    <p></p>
+    <h1>Homepage</h1>
 </body>
 </html>
