--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice</title>
+    <title>Practicegit </title>
 </head>
 <body>
     <h1>Homepage</h1>
+    <a>About the Odin Project</a>
 </body>
 </html>
